DEV-1646: Feature to run remote command (Unix only), refactoring (#69)
